--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ django-crispy-forms = "^1.11.0"
 djangorestframework = "^3.12.2"
 django-rest-auth = "^0.9.5"
 django-cors-headers = "^3.7.0"
+redis = "^3.5.3"
+channels = "^3.0.3"
+channels-redis = "^3.2.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.8.4"
